2006-04-22  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: fix Type str_from_xml calls
	* src/DataViews/_MediaView.py: Shorten tab name
	* src/DataViews/_RepositoryView.py: Shorten tab name
	* src/DataViews/_SourceView.py: Shorten tab name
	* src/DataViews/_EventView.py: Shorten tab name
	* src/DataViews/_FamilyView.py: Shorten tab name
	* src/DataViews/_FamilyList.py: Shorten tab name
	* src/DataViews/_PedigreeView.py: Shorten tab name
	* src/DataViews/_PlaceView.py: Shorten tab name
	* src/DataViews/_PersonView.py: Shorten tab name
	* src/DataViews/_MapView.py: Shorten tab name
	* src/glade/gramps.glade: remove unused option
	* src/const.py.in: bugtracker address fix

2006-04-21  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/PluginUtils/_ReportUtils.py: keep up with RelLib changes
	* src/plugins/DetDescendantReport.py: keep up with RelLib changes
	* src/plugins/DescendChart.py: keep up with RelLib changes
	* src/plugins/DetAncestralReport.py: keep up with RelLib changes

2006-04-21  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_ReportUtils.py (buried_str): Typo.
	* src/plugins/DetDescendantReport.py (write_children): Use child_refs.
	* src/plugins/DetAncestralReport.py (write_children): Use child_refs.
	* src/plugins/IndivComplete.py (write_fact): Use new event type.
	* src/docgen/KwordDoc.py (KwordDoc.close): Use tarile.

2006-04-21  Don Allingham  <don@gramps-project.org>
	* src/StartupDialog.py: fix close
	* src/plugins/Desbrowser.py: Use ActivPersonTool
	* src/PluginUtils/_Tool.py: active person tool added
	* src/plugins/FilterEditor.py: fix close arguments
	* src/plugins/ChangeNames.py: fix close arguments
	* src/plugins/Merge.py: fix close arguments
	* src/plugins/ChangeTypes.py: fix close arguments
	* src/plugins/PatchNames.py: fix close arguments
	* src/plugins/Desbrowser.py: check for active person
	* src/GrampsDb/_ReadXML.py: fix typos
	* src/PluginUtils/_PluginMgr.py: handle module to description mapping