@@ -1,3 +1,7 @@
+2006-04-21  Brian Matherly  <pez4brian@users.sourceforge.net>
+	* src/PluginUtils/_ReportUtils.py: keep up with RelLib changes
+	* src/plugins/NavWebPage.py: keep up with RelLib changes
+
 2006-04-22  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadXML.py: fix Type str_from_xml calls
 	* src/DataViews/_MediaView.py: Shorten tab name
